src/objects/Spire_to_MuleSoft__e.object
<CustomObject>
    <fields>
        <fullName>CPU_Processing_Status__c</fullName>
        <label>CPU Processing Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CaseId__c</fullName>
        <label>CaseId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ContentDocumentId__c</fullName>
        <description>It will hold the content document id</description>
        <label>ContentDocumentId</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InteractionID__c</fullName>
        <label>&apos;Interaction ID</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Spire To MuleSoft</label>
    <pluralLabel>Spire to MuleSoft</pluralLabel>
</CustomObject>